---
version: 0.01
date:    XXX
changes:
- First release
- Forked from Test::JSON by Curtis "Ovid" Poe